--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@laravel/echo-vue": "^2.2.6",
         "@tailwindcss/vite": "^4.1.11",
         "@types/node": "^22.13.5",
         "@vitejs/plugin-vue": "^6.0.0",
@@ -19,9 +20,11 @@
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-vue": "^9.32.0",
+        "laravel-echo": "^2.2.6",
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
+        "pusher-js": "^8.4.0",
         "typescript": "^5.2.2",
         "typescript-eslint": "^8.23.0",
         "vite": "^7.0.4",
@@ -32,11 +35,13 @@
         "@heroicons/vue": "^2.2.0",
         "@inertiajs/vue3": "^2.1.0",
         "@tanstack/vue-table": "^8.21.3",
+        "@tiptap/extension-code-block-lowlight": "^3.10.7",
         "@tiptap/extension-color": "^3.3.1",
         "@tiptap/extension-gapcursor": "^3.4.2",
         "@tiptap/extension-highlight": "^3.3.1",
         "@tiptap/extension-placeholder": "^3.3.1",
         "@tiptap/extension-table": "^3.4.2",
+        "@tiptap/extension-text-align": "^3.11.1",
         "@tiptap/extension-text-style": "^3.3.1",
         "@tiptap/extension-typography": "^3.3.1",
         "@tiptap/extension-underline": "^3.3.1",
@@ -46,8 +51,11 @@
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "laravel-vite-plugin": "^2.0.0",
+        "lowlight": "^3.3.0",
         "lucide-vue-next": "^0.468.0",
+        "mermaid": "^11.12.1",
         "puppeteer": "^24.17.1",
         "reka-ui": "^2.5.0",
         "sonner": "^2.0.7",
@@ -56,7 +64,7 @@
         "tw-animate-css": "^1.2.5",
         "vee-validate": "^4.15.1",
         "vue": "^3.5.13",
-        "vue-sonner": "^2.0.8",
+        "vue-sonner": "^2.0.9",
         "ziggy-js": "^2.4.2",
         "zod": "^3.25.76"
     },
