--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ezyang/htmlpurifier": "^4.19",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
+        "laravel/reverb": "^1.6",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "openai-php/laravel": "^0.16.0",
         "phpoffice/phpword": "^1.3",
+        "pusher/pusher-php-server": "*",
         "spatie/laravel-pdf": "^1.7",
         "tightenco/ziggy": "^2.4"
     },
