--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_name localhost;
+
     root /var/www/html/public;
     index index.php index.html index.htm;
 
@@ -13,17 +14,17 @@ server {
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
-
-        # Increase timeouts for AI generation
-        fastcgi_read_timeout 300;
-        fastcgi_send_timeout 300;
-        proxy_connect_timeout 300;
-        proxy_send_timeout 300;
-        proxy_read_timeout 300;
     }
 
-    location ~ /\.ht {
-        deny all;
+    # WebSocket proxy to Reverb
+    location /app/ {
+        proxy_pass http://reverb:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
     }
 
     client_max_body_size 100M;
