--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "ezyang/htmlpurifier": "^4.19",
         "inertiajs/inertia-laravel": "^2.0",
+        "lab404/laravel-impersonate": "^1.7",
         "laravel/framework": "^12.0",
         "laravel/reverb": "^1.6",
         "laravel/sanctum": "^4.2",
@@ -20,6 +21,7 @@
         "phpoffice/phpword": "^1.3",
         "pusher/pusher-php-server": "*",
         "spatie/laravel-pdf": "^1.7",
+        "spatie/laravel-permission": "^6.7",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
