--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
         "@tiptap/extension-underline": "^3.3.1",
         "@tiptap/starter-kit": "^3.3.1",
         "@tiptap/vue-3": "^3.3.1",
+        "@unovis/ts": "^1.6.2",
+        "@unovis/vue": "^1.6.2",
         "@vee-validate/zod": "^4.15.1",
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
@@ -57,11 +59,12 @@
         "lucide-vue-next": "^0.468.0",
         "mermaid": "^11.12.1",
         "puppeteer": "^24.17.1",
-        "reka-ui": "^2.5.0",
+        "reka-ui": "^2.6.0",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
+        "vaul-vue": "^0.4.1",
         "vee-validate": "^4.15.1",
         "vue": "^3.5.13",
         "vue-sonner": "^2.0.9",
