feat: Install and configure Laravel Pulse for production monitoring
- Add Laravel Pulse package for real-time application monitoring
- Configure authorization gate for super_admin role access
- Add Pulse user resolver for avatar and email display
- Create pulse:check and pulse:work daemon configurations
- Add scheduled pulse:clear command for daily data cleanup
- Configure Redis ingest driver for production performance
- Add .env.pulse.example with Forge deployment instructions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,6 +123,25 @@ services:
       - mysql
       - redis
 
+  pulse:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: finalyze_pulse
+    command: php artisan pulse:check
+    environment:
+      DB_HOST: mysql
+      DB_PORT: 3306
+      REDIS_HOST: redis
+    volumes:
+      - .:/var/www/html
+    networks:
+      - finalyze_network
+    depends_on:
+      - mysql
+      - redis
+    restart: unless-stopped
+
 networks:
   finalyze_network:
     driver: bridge
